apps/cygnus/base/Endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cygnus
subsets:
  - addresses:
      - ip: 10.10.20.10
    ports:
      - port: 443
