apps/cygnus/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cygnus
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
