apps/cygnus/base/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cygnus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: tls
      protocol: TLS
      hostname: cygnus.nahue.ar
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Passthrough # It is still not possible to skip TLS verification, so passthrough is the only option for now https://github.com/kubernetes-sigs/gateway-api/issues/4152
