apps/cygnus/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cygnus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - cygnus.nahue.ar
      secretName: cygnus
  rules:
    - host: cygnus.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cygnus
                port:
                  number: 443
